--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "nikic/php-parser": "~1.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.7.*"
+    "phpunit/phpunit": "4.7.*",
+    "mikey179/vfsStream": "~1.5"
   }
 }
