--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "4.7.*",
-    "mikey179/vfsStream": "~1.5"
+    "mikey179/vfsStream": "~1.5",
+    "fabpot/php-cs-fixer": "~1.10"
   }
 }
