--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ php:
     - 5.6
     - 7.0
 
+matrix:
+    allow_failures:
+        - php: 7.0
+
 install:
     - composer install --no-interaction
 
