--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   "require-dev": {
     "phpunit/phpunit": "4.7.*",
     "mikey179/vfsStream": "~1.5",
-    "fabpot/php-cs-fixer": "~1.10"
+    "fabpot/php-cs-fixer": "~1.10",
+    "kherge/box": "~2.5"
   },
   "bin": [
     "bin/php7cc"
