--- a/.travis.yml
+++ b/.travis.yml
@@ -13,17 +13,23 @@ php:
   - 5.6
   - 7.0
 
+env:
+  - COMPOSER_FLAGS="--prefer-lowest"
+  - COMPOSER_FLAGS=""
+
 matrix:
   allow_failures:
     - php: 7.0
 
 install:
-  - composer install --no-interaction
+  - composer update $COMPOSER_FLAGS --no-interaction
 
 script:
   - "./vendor/bin/phpunit"
 
 before_deploy:
+  - "composer require kherge/box:~2.5"
+  - "composer update --prefer-lowest"
   - "./vendor/bin/box build"
 
 deploy:
@@ -36,3 +42,4 @@ deploy:
     repo: sstalle/php7cc
     php: 5.6
     tags: true
+    condition: "$COMPOSER_FLAGS = --prefer-lowest"
