--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,14 @@
   },
   "require": {
     "php": ">=5.3.3",
-    "symfony/console": "~2.3",
+    "symfony/console": "~2.3 || ~3.0",
     "pimple/pimple": "~3.0",
     "nikic/php-parser": "~1.4"
   },
   "require-dev": {
     "phpunit/phpunit": "4.7.*",
     "mikey179/vfsStream": "~1.5",
-    "fabpot/php-cs-fixer": "~1.10",
-    "kherge/box": "~2.5"
+    "fabpot/php-cs-fixer": "~1.10"
   },
   "bin": [
     "bin/php7cc"
