Add an option to output relative paths

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   "require": {
     "php": ">=5.3.3",
     "symfony/console": "~2.3 || ~3.0",
+    "symfony/finder": "~2.3 || ~3.0",
     "pimple/pimple": "~3.0",
     "nikic/php-parser": "~1.4"
   },
