Exclude require-dev packages from phars built by Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ after_script:
 
 before_deploy:
   - "composer require kherge/box:~2.5"
-  - "composer update --prefer-lowest"
+  - "composer update --prefer-lowest --no-dev"
   - "./vendor/bin/box build"
 
 deploy:
