--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "require-dev": {
     "phpunit/phpunit": "4.7.*",
     "mikey179/vfsStream": "~1.5",
-    "fabpot/php-cs-fixer": "~1.10"
+    "friendsofphp/php-cs-fixer": "~1.10"
   },
   "bin": [
     "bin/php7cc"
