--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
     }
   },
   "require": {
-    "php": ">=5.3.3",
+    "php": ">=5.5",
     "symfony/console": "~2.3 || ~3.0",
     "symfony/finder": "~2.3 || ~3.0",
     "pimple/pimple": "~3.0",
-    "nikic/php-parser": "~1.4",
+    "nikic/php-parser": "~3.1",
     "bcncommerce/json-stream": "0.3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.7.*",
+    "phpunit/phpunit": "^4.8",
     "mikey179/vfsStream": "~1.5",
     "friendsofphp/php-cs-fixer": "~1.10"
   },
